update test in accordo with new code